# annex_msgs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
msgs/: Ai2Vcu.msg  Vcu2ai.msg  Vcu2con.msg
